Fix padding for article on mobile

--- a/assets/sass/components/_article.scss
+++ b/assets/sass/components/_article.scss
@@ -4,7 +4,7 @@
 	border: 1px solid #eeeeee;
 	border-radius: $border-radius;
 	box-shadow: $primary-box-shadow;
-	padding: 15px 15px 7px;
+	padding: 15px 15px 23px;
 	margin-bottom: 30px;
 
 	@include media-breakpoint-up(sm) {
